2006-02-08 Ian Rutt
 * Added subroutine to glimmer_config.f90 to allow the merging of two
   config file types. This means that an additional config file can be read,
   passed to glint as an instance of ConfigSection, and then merged with
   another config file. 
	
2006-02-07 Ian Rutt
 * Added subroutine to glimmer_config.f90 to allow arbitrary addition or
   overwriting of config file entries once file has been read. This is
   a first step towards allowing the arbitrary passing of runtime
   parameters through glint API.

2006-01-31 Ian Rutt
 * Added snow densification to daily PDD scheme, and rewrote core of the
   scheme to make it more logical. Tested fairly thoroughly.

2006-01-19 Ian Rutt
 * Corrected CF mapping compliance in glimmer_CFproj.f90
 * Added ability to write CF-compilant mapping info to glimmer_proj.f90
 * (need to combine these two bits of code at some point)

2005-12-19 Magnus Hagdorn
 * configure.in: bump version to 0.5.7 for new development series

2005-12-19 Magnus Hagdorn
 * configure.in: bump version to 0.5.6
 * NEWS: update

2005-12-13 Magnus Hagdorn
 * m4macros/glimmer.m4: new file containing m4 macro for setting up GLIMMER
 * m4macros/Makefile.am: install glimmer.m4
 * Makefile.am: deal with m4macros dir
 * configure.in: generate m4macros/Makefile
 * glide_launch.py: add option to run a specific binary

2005-11-28 Magnus Hagdorn
 * glide_types.f90: add new variable for bed softness
 * glide_vars.def: ditto
 * glide.f90: initialise bed softness variable
 * glide_velo.f90: use bed softness variable to determine sliding parameter
 * glide_setup.f90: move some parameter scaling from glide_velo.f90 to here

2005-11-18 Ian Rutt
 * Added calving field to glide. This accessed by glint through accessor
   functions. The field is calculated in the marine limit routine in
   glide_setup.f90
 * Added possibility of supplying a list of hotstart files in glint API.
   This was requested, but is a big fudge, which I'm not terribly happy